fixed navbar overlap

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@ body {
 section {
   padding-top: 4rem;
   padding-bottom: 4rem;
+  scroll-margin-top: 50px; /* i put this to fix navbar overlap, can adjust to match  navbar height */
 }
 
 h2 {
